# order-aggregator

./: .env  Cargo.toml  README.md  config.toml
proto/: orderbook.proto
src/: aggregator.rs  binance.rs  bitstamp.rs  common.rs  configuration.rs  main.rs  server.rs
