[package]
name = "order-aggregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
config = { version = "0.13.3", default-features = false, features = ["toml"] }
dotenvy = "0.15.7"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.18"
ordered-float = { version = "3.7.0", features = ["serde"] }
prost = "0.11.9"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
tokio-tungstenite = { version = "0.19.0", features = ["connect", "rustls-tls-webpki-roots"] }
tokio-util = "0.7.8"
tonic = "0.9.2"
url = { version = "2.3.1", features = ["serde"] }

[build-dependencies]
tonic-build = "0.9.2"
